# Prisoners-Dilemma

./: CMakeLists.txt
src/: main.cpp
src/core/: Game.cpp  Game.h  GameMatrix.cpp  GameMatrix.h  History.cpp  History.h  Players.cpp  Players.h  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  Tournament.cpp  Tournament.h
src/strategies/advanced/: AdaptiveStrategy.cpp  AdaptiveStrategy.h  FiftyFifty.cpp  FiftyFifty.h  TitForTat.cpp  TitForTat.h
src/strategies/basic/: AlwaysCooperate.cpp  AlwaysCooperate.h  AlwaysDefect.cpp  AlwaysDefect.h  Random.cpp  Random.h
src/utils/: ConfigFileParser.cpp  ConfigFileParser.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h
tests/: test_config.cpp  test_factory.cpp  test_game.cpp  test_strategies.cpp
